Fix decimal wrapping issue for left column.

--- a/src/Denom.css
+++ b/src/Denom.css
@@ -50,6 +50,7 @@
   display: block;
   cursor: pointer;
   overflow-wrap: break-word;
+  word-break: break-all;
 }
 .numerators {
 }
